[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/ComoJogar.gd" type="Script" id=1]
[ext_resource path="res://Images/ComoJogarMenu/comojogar.png" type="Texture" id=2]
[ext_resource path="res://Images/buttons/menu2.png" type="Texture" id=3]
[ext_resource path="res://Images/buttons/menu3.png" type="Texture" id=4]
[ext_resource path="res://Images/buttons/menu.png" type="Texture" id=5]
[ext_resource path="res://Images/buttons/sair_normal.png" type="Texture" id=6]
[ext_resource path="res://Images/buttons/sair_pressed.png" type="Texture" id=7]
[ext_resource path="res://Images/buttons/sair_hover.png" type="Texture" id=8]
[ext_resource path="res://Images/ComoJogarMenu/Aetio/playing-01.png" type="Texture" id=9]
[ext_resource path="res://Images/ComoJogarMenu/Aetio/playing-02.png" type="Texture" id=10]
[ext_resource path="res://Images/ComoJogarMenu/Aetio/playing-03.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ComoJogar" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.990267, 0.990267 )
texture = ExtResource( 2 )
centered = false
region_rect = Rect2( 0, 0, 1920, 1120 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 800.0
margin_top = 391.0
margin_right = 961.0
margin_bottom = 535.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 20.0
margin_right = 212.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 200.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

position = Vector2( 172.26, 484.699 )
scale = Vector2( 0.101215, 0.101215 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]


